--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -23,7 +23,7 @@ textarea {
 }
 
 body {
-    background: url('http://secret11.com/planet-9.jpg');
+    background: url('/dist/assets/planet-9.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
