--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -359,9 +359,12 @@ header {
                 line-height: 24px;
                 white-space: pre-line;
                 font-size: 14px;
+                text-align: justify;
 
                 img {
                     border-radius: 3px;
+                    margin-left: 11px;
+                    margin-top: 7px;
                 }
 
                 .story-title {
@@ -692,6 +695,29 @@ header {
     }
 }
 
+.image-item {
+    position: relative;
+    width: auto;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    background: #ddd;
+    /* border: solid #ccc; */
+    box-shadow: 0px 1px 20px #aaa;
+
+    .close {
+        position: absolute;
+        top: 0px;
+        right: 0px;
+        font-size: 27px;
+        color: #fff;
+        font-size: 16px;
+        padding: 4px;
+        text-shadow: 0px 2px 2px #000;
+        background: rgba(0,0,0,0.5);
+    }
+}
+
 
 // ***************************************** //
 // Profile page //
@@ -838,6 +864,17 @@ header {
         width: 50px;
         height: 50px;
         margin: 5px;
+    }
+}
+
+.gender{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+
+    .pretty {
+        margin: 0px 20px;
     }
 }
 
