Minor changes to whole width

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -392,7 +392,8 @@ header {
 }
 
 .home-page {
-    width: 98%!important;
+   // width: 98%!important;
+   width: 1111px;
 
     .storyfeed {
         display: flex;
